@@ -10,6 +10,7 @@
 - Added shuffle and random seed parameter to stochastic gradient descent classifier.
 - Added `rstrip` parameter to `find_filegroups` to allow trimming of base names.
 - Added `ignore_substring` parameter to `find_filegroups` and `find_files`.
+- Replaced .rstrip in `find_filegroups` with more robust regex.
 
 0.2.2
 =======
